k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: my-acme-service
  labels:
    app: my-acme-website

spec:
  selector:
    app: my-acme-website

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: LoadBalancer
