k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: my-acme-netpol

spec:
  podSelector:
    matchLabels:
      app: my-acme-website

  policyTypes:
    - Ingress

  ingress:
    - ports:
        - protocol: TCP
          port: 80
